# il2cpp-decompile

./: .env.example  .gitignore  LICENSE  README.md  il2cpp_decompile.py  pyproject.toml  requirements.txt
ghidra_scripts/: parse_header.py
